<resources>
    <string name="app_name">Modernland Approval</string>

    <string name="default_notification_channel_id">Notification</string>
    <string name="fcm_message">Notification</string>

    <string name="modernland">Modernland Realty Tbk </string>
    <string name="modernland_apps">Modernland Apps </string>
    <string name="mobile_apps">Mobile Apps </string>

    <string name="dashboardpermo">Dashboard </string>
    <string name="dashboardmemo">Dashboard </string>
    <string name="dashboardnpv">Dashboard </string>
    <string name="dashboard_iom">Inter Office Memo</string>
    <string name="dashboard_pbj">Permohonan Barang Jasa</string>
    <string name="dashboard_npv">Net Present Value</string>

    <string name="menu">Menu </string>
    <string name="menu_list">Menu List</string>
    <string name="menu_kordinasi">Menu List Kordinasi</string>
    <string name="menu_rekomendasi">Menu Rekomendasi</string>
    <string name="menu_approv">Menu Approve</string>
    <string name="main_menu">Main Menu </string>

    <string name="iom">Approval IOM</string>
    <string name="npv">Approve NPV</string>
    <string name="permohonan">PBJ</string>
    <string name="a_po">Approve PO</string>

    <string name="approve_memo">Approve Memo</string>
    <string name="list_memo">List Memo</string>
    <string name="list_npv">List Net Present Value</string>
    <string name="list_pembelian">List Pembelian</string>
    <string name="list_permohonan">List Permohonan</string>
    <string name="list_rekomendasi">List Rekomendasi</string>
    <string name="wait">Wait For </string>
    <string name="reject">Rejected </string>
    <string name="kordinasi">Kordinasi </string>
    <string name="rekomendasi">Recomendation </string>
    <string name="list">History </string>
    <string name="lists">List </string>
    <string name="memo">Memo </string>
    <string name="permo">Approval Permohonan </string>
    <string name="pemberit">Pemberitahuan </string>
    <string name="pembel">Pembelian </string>

    <string name="login">Login</string>
    <string name="view">View</string>
    <string name="file">File</string>
    <string name="download">Download</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="pin">Pin</string>
    <string name="remember">Remember Me</string>
    <string name="nomor">Nomor </string>
    <string name="kode_unit">Kode Unit </string>
    <string name="nama">Nama </string>
    <string name="cluster">Cluster </string>
    <string name="build_sz">Build Size </string>
    <string name="land_sz">Land Size </string>
    <string name="price">Price </string>
    <string name="diskon">Diskon </string>
    <string name="upharga">Up Harga </string>
    <string name="rate">Interest Rate </string>
    <string name="source">Source </string>
    <string name="tgl_buat">Tanggal Buat </string>
    <string name="kepada">Kepada Yth </string>
    <string name="cc">Cc </string>
    <string name="dari">Dari </string>
    <string name="tanggal">Tanggal </string>
    <string name="lama">Lama "\n"- Pengajuan </string>
    <string name="pengajuan">- Pengajuan </string>
    <string name="pending">- Pending </string>
    <string name="status">Status </string>
    <string name="jenis">Jenis </string>
    <string name="catatan">Catatan </string>
    <string name="komen">Input Comment </string>
    <string name="perihal">Perihal </string>
    <string name="karyawan">Karyawan </string>
    <string name="departemen">Departemen </string>
    <string name="detail">Detail</string>
    <string name="status_memo">Status Memo </string>
    <string name="status_email">Status Email </string>
    <string name="pilih_head">Pilih Head</string>
    <string name="from">Dari</string>
    <string name="to">Tujuan</string>
    <string name="setting">Setting</string>
    <string name="dashboard_kategori">Kategori Iom</string>
    <string name="dashboard_po">Kategori Purchase Order</string>

    <string name="marketing">Marketing</string>
    <string name="club">Club</string>
    <string name="finance">Finance</string>
    <string name="quantity">Quantity</string>
    <string name="surveyor">Surveyor</string>
    <string name="legal">Legal</string>
    <string name="purchasing">Purchasing</string>
    <string name="business">Business</string>
    <string name="develop">Development</string>
    <string name="project">Technical</string>
    <string name="promosi">Promosi</string>
    <string name="human">Human</string>
    <string name="resource">Resource</string>
    <string name="kategori">Kategori</string>
    <string name="Accounting">Accounting</string>
    <string name="Operation">Operation</string>
    <string name="Billionaire">Billionaire</string>
    <string name="Town">Town</string>
    <string name="Management">Management</string>
    <string name="Landed">Landed</string>
    <string name="Project">Project</string>
    <string name="Permit">Permit</string>
    <string name="Sertification">Sertification</string>
    <string name="approve">Approved</string>
    <string name="view_detail">View Detail</string>
    <string name="download_file">Download File</string>
    <string name="klik_view_detail"><u>Klik Disini</u></string>
    <string name="po">Purchase Order</string>

    <string name="desc_po">Descripsi PO</string>
    <string name="no_po">Nomor PO</string>
    <string name="no_ref">Nomor Ref</string>
    <string name="po_date">Tanggal PO</string>
    <string name="dept_usr">Departement User</string>
    <string name="supplier">Nama Supplier</string>
    <string name="adv_pay">Advance Payment</string>
    <string name="prog_pay">Progres Payment</string>

    <string-array name="head">
        <item>--Pilih Head--</item>
        <item>LH. Freddy Chan</item>
        <item>Herman Go</item>
        <item>Tamara</item>
        <item>Dharma Mitra</item>
        <item>Jamal</item>
        <item>Rifky Andryan</item>
        <item>Hendra</item>
        <item>Lusia Widywastuti</item>
        <item>Bardan Garut Atmaja</item>
        <item>Arie Susilo</item>
    </string-array>


    <string name="welcome">Welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
