<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ListDetailFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/back"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nomor"/>

        <TextView
            android:id="@+id/txtNomord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/kepada"/>

        <TextView
            android:id="@+id/txtKepada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cc"/>

        <TextView
            android:id="@+id/txtCc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dari"/>

        <TextView
            android:id="@+id/txtDari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tanggal"/>

        <TextView
            android:id="@+id/txtTanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/perihal"/>

        <TextView
            android:id="@+id/txtPerihal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/jenis"/>

        <TextView
            android:id="@+id/txtJenis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnWVM"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnMVM"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:text="@string/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:visibility="gone"
            android:id="@+id/txtWVM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


</LinearLayout>